<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>com.dexels.navajo.core</artifactId>
	<version>5.2.17-SNAPSHOT</version>
	<packaging>eclipse-plugin</packaging>
	<parent>
		<groupId>com.dexels.navajo</groupId>
		<artifactId>com.dexels.navajo.super</artifactId>
		<version>1.0.0</version>
		<relativePath>../../setup/com.dexels.repository</relativePath>
	</parent>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javacc-maven-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>jjtree-javacc</id>
						<goals>
							<goal>jjtree-javacc</goal>
						</goals>
						<configuration>
              <includes>
                <include>**/*.jjt</include>
              </includes>
              <sourceDirectory>javacc</sourceDirectory>
              <outputDirectory>src</outputDirectory>
              <interimDirectory>src</interimDirectory>	
              <unicodeInput>true</unicodeInput>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>${tycho-groupid}</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
